2529 [MainForm]             improved Drag & Drop handling. Bug #786
2528 [AVI Muxer]            disabled FPS change option as it is not supported. Bug #785
2527 [Audio Encoder]        fixed RaWavSource() for 64bit files >2GB. Bug #792
2526 [HD Streams Extractor] fixed 3D Blu-Ray processing (regression of eac3to 3.28+). Bug #795


Changelog 2507 --> 2525

Features/Changes:
[Audio Encoder]        added custom command line support
[Chapter Creator]      added option to sort the title list by chapter count
[FDK-AAC Encoder]      added FDK-AAC encoder support
                       due to the FDK-AAC license the encoder will not be available in the online updater

Enhancements/Fixes:
[Chapter Creator]      cosmetics
[Chapter Creator]      improved error handling
[HD Streams Extractor] cosmetics
[OneClick]             better support for Blu-ray playlist where eac3to and mediainfo report different track information
[OneClick]             fixed removing the wrong subtitle track when using the DEL key
[Update]               get update server configuration data from the update server itself
[Update]               if an outdated package is enabled the update will be downloaded automatically (if auto update is not disabled)
[VobSubber]            improved error handling
[x265]                 adjusted command line for recent avs4x265


Changelog 2501 --> 2507

Features/Changes:
[Update]               removed update server megui.xvidvideo.ru for the stable branch as it cannot be synced anymore
[Update]               increased update data refresh interval to 10 days for the stable server

Enhancements/Fixes:
[Adaptive Muxer]       fixed first subtitle unintended set to default. Bug #774
[Audio Encoder]        fixed wrong channel count mismatch warning for AVS files. Bug #767
[Chapter Creator]      improved multi angle Blu-Ray support
[L-SMASH Indexer]      the cache file was sometimes not deleted
[Update]               fixed freeze when adding new custom update servers. Bug #769